Fix protocol template alignment and placeholders [SCI-6981]

--- a/app/assets/stylesheets/protocols/protocol.scss
+++ b/app/assets/stylesheets/protocols/protocol.scss
@@ -64,6 +64,21 @@
 
   .protocol-description {
     margin-bottom: 2em;
+
+    img {
+      border-radius: 50%;
+      height: 24px;
+      width: 24px;
+    }
+
+    .fas.block-icon {
+      margin-right: 6px;
+
+      &.fa-graduation-cap,
+      &.fa-font {
+        margin-right: 10px;
+      }
+    }
   }
 
   .protocol-step-actions {
